# yuku

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  C-bindings.md  CONTRIBUTING.md  CPU.1779534055739.16249.cpuprofile  LICENSE  README.md  SECURITY.md  build.zig  build.zig.zon  bunup.config.ts  decode.js  estree.md  generated.js  input.ts  js_parser.zig  napi.js  napi.ts  nice.zig  oxc.js  oxc.ts  package.json  repr.ts  roadmap.md  sourcemap.json  strip.ts  target-ast-reference.ts  test-parens.ts  test.js  test.jsx  test.ts  test.tsx  test_edge.js  todo.md  tsconfig.json  vitest.config.ts  wasm.ts  yuku-parser.js
.github/: dependabot.yml  zizmor.yml
bench/: parse.bench.ts
bench/codegen/oxc/: Cargo.toml
bench/codegen/oxc/src/: main.rs
docs/: astro.config.ts  generate-llms.ts  package.json  zine.ziggy
experiment/: minimal.ts  minimal.zig
explorer/: index.html  main.js  server.ts  style.css
npm/: browser.ts  bump.config.ts  bunup.config.ts  package.json  tsconfig.json
playground/: build.ts  index.html  main.js  server.ts  style.css
profiler/: bench.zig  load-parser-bench-files.ts  main.zig  profile.zig
scripts/: gen_ast_snapshots.zig  gen_unicode_id.zig  generate-unicode-id-table.zig  generate-unicode-id.zig  generate_unicode_id.zig  run_tests.ts  snapshot_test_runner.zig  test-runner.zig  test262.zig  test262_runner.zig  test_runner.zig
src/: ast.zig  lexer.zig  lexer_test.zig  main.zig  parser.zig  print-error.zig  test.js  token.zig  unicode-id.zig  util.zig  wasm.zig
test/: array-pattern-errors.js  array-patterns.js  bigint-literals.js  (+78 more)
(+13272 files in other folders)
